# CityEvents

./: .gitignore  Readme.md  alembic_readme.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: d4659212a66d_initial_migration.py
app/: config.py  config.yaml  database.py  main.py  prompts.yaml  setting.py
app/agent/: llm_factory.py  place_search_agent.py
app/bot/handlers/: user_router.py
app/bot/keyboards/: kbs.py
app/bot/utils/: state_machine.py  utils.py
app/models/: __init__.py  models.py
app/repository/: base.py  message.py  user.py
app/services/: city_event.py  llm_service.py
